# deep-learning-image-compression

./: .gitignore  .pre-commit-config.yaml  Makefile  NEWS.md  README.md  ROADMAP.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/mkdocs/: index.md  references.md  techniques.md
examples/: train.py  train_elic_cifar10.py  train_pointcloud.py  train_video.py
tests/: test_cli_train.py  test_train.py  test_train_fabric.py
tinify/: __init__.py  _cxx_wrapper.py  ans_wrapper.py  version.py
tinify/cli/: __init__.py  config.py  train.py
tinify/datasets/: __init__.py  cache.py  image.py  ndarray.py  pregenerated.py  rawvideo.py  stack.py  utils.py  video.py  vimeo90k.py
tinify/entropy_models/: __init__.py  entropy_models.py  entropy_models_vbr.py
tinify/latent_codecs/: base.py  channel_groups.py  checkerboard.py  entropy_bottleneck.py  gaussian_conditional.py  hyper.py  hyperprior.py  rasterscan.py
tinify/layers/: __init__.py  basic.py  gdn.py  layers.py
tinify/losses/: __init__.py  rate_distortion.py  utils.py
tinify/models/: base.py  google.py  priors.py  sensetime.py  utils.py  vbr.py  waseda.py
tinify/ops/: __init__.py  bound_ops.py  ops.py  parametrizers.py
tinify/rust_exts/: Cargo.toml  README.md  pyproject.toml
tinify/rust_exts/src/: decoder.rs  encoder.rs  lib.rs  ops.rs  rans64.rs
tinify/sadl_codec/: dataset2latent.py  extract_codec.py  extract_quantizers.py
tinify/transforms/: __init__.py  functional.py  transforms.py
tinify/typing/: __init__.py  torch.py
tinify/zoo/: __init__.py  image.py  video.py  (+2 more)
(+44 files in other folders)
