[package]
name = "tinify_exts"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
license = "BSD-3-Clause"
description = "Rust extensions for tinify - rANS entropy coding and operations"

[lib]
name = "tinify_exts"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
